[gd_scene load_steps=4 format=3 uid="uid://c3ary26xq7cf7"]

[ext_resource type="Script" uid="uid://bsxiyf5kd540w" path="res://level/traps/spikes.gd" id="1_lfmb4"]
[ext_resource type="Texture2D" uid="uid://bagwmoyrxqvds" path="res://assets/textures/traps/spikes.png" id="2_et40e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lfmb4"]
size = Vector2(18, 2)

[node name="Spikes" type="Area2D"]
collision_layer = 2
script = ExtResource("1_lfmb4")

[node name="Spikes\' Sprite" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(-2.98023e-08, -0.5)
scale = Vector2(0.0304569, 0.0208333)
texture = ExtResource("2_et40e")

[node name="Spikes\' Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_lfmb4")

[node name="Damage Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="ready" from="Damage Timer" to="." method="_on_damage_timer_ready"]
[connection signal="timeout" from="Damage Timer" to="." method="_on_damage_timer_timeout"]
